main.css
:root {
  --blue-color: #2E5979;
  --white-color: #fff;
}

* {
  color: var(--blue-color);
  font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
  letter-spacing: 1px;
  line-height: 1.5;
}

body {
  width: 100vw;
  height: 100vh;
  background-color: var(--white-color);
  overflow: hidden;
  position: relative;
}

h2 {
  color: var(--blue-color);
}

.banner {
  background-color: var(--blue-color);
  width: 70%;
  min-width:500px;
  height: 100px;
  position: absolute;
  top: 2vw;
  left: -17vw;
  display: grid;
  align-items: center;
  text-transform: uppercase;
  transform: rotate(-30deg);
}

.banner .text {
  color: var(--white-color);
  font-weight: 600;
  letter-spacing: 2px;
  font-size: clamp(30px, 2.2vw, 2.2vw);
  word-wrap: wrap;
  width: 250px;
  margin: auto;
}

@media only screen and (min-width: 1270px) {
  .banner .text {
    width: 600px;
  }
}

@media only screen and (max-width: 500px) {
  .banner {
    top: -5px;
    left: -160px;
  }
  
  .banner .text {
    font-size: 20px;
    width: 150px;
  }
}

.header .brand-display {
  position: absolute;
  width: 25%;
  right: 0;
  margin-right: 10%;
  margin-top: 5%;
}

.container {
  position: relative;
  z-index: -1;
  height: 100%;
  width: 80vw;
  margin: auto;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.container #construction {
  width: clamp(400px, 65%, 830px);
}

.container .content {
  display: flex;
  margin-top: -8%;
}

.container .content .item {
  width: 35%;
  margin-right: 15%;
}

@media only screen and (max-width: 1300px) {
  .container .content .item {
    width: 43%;
    margin-right: 7%;
  }
}

/* Main breaking point */
@media only screen and (max-width: 1000px) {

  body {
    overflow-y: auto;
  }

  .container .content {
    flex-direction: column;
  }

  .container .content .item {
    width: 80%;
    margin-right: 0;
  }

  .footer {
    padding: 50px 0 10px 0;
    color: red;
  }
}

@media only screen and (max-width: 700px) {
  .container {
    padding-top: 100px;
  }

  .container .content .item {
    width: 100%;
    margin-right: 0;
    padding-top: 100px;
  }
}

#construction {
  max-width: 100%;
  max-height: 80%;
}

.btn {
  background-color: var(--blue-color);
  padding: 8px 5px;
  display: grid;
  align-items: center;
  width: 170px;
  border-radius: 6px;
  box-shadow: 0px 3px 6px rgba(0,0,0, 0.16) ;
}

.btn a {
  color: var(--white-color);
  text-align: center;
  font-weight: 600;
}

